image spin 기능 추가 current 의 하위 화면 directory 이동 bootstrap-vue 제거

--- a/client/src/assets/mixins.scss
+++ b/client/src/assets/mixins.scss
@@ -33,3 +33,5 @@
   width: $width;
   height: $height;
 }
+
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
