--- a/client/src/assets/mixins.scss
+++ b/client/src/assets/mixins.scss
@@ -1,3 +1,19 @@
+@mixin size($width, $height: $width) {
+  width: $width;
+  height: $height;
+}
+
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+@mixin popup-background-wrap {
+  @include size(100%);
+  position: fixed;
+  background-color: rgba(0,0,0,0.3);
+  left: 0;
+  top: 0;
+  z-index: 100;
+}
+
 @mixin current-container-body-title {
   height: 60px;
   display: flex;
@@ -28,10 +44,3 @@
   font-weight: bold;
   color: #85b0e5;
 }
-
-@mixin size($width, $height: $width) {
-  width: $width;
-  height: $height;
-}
-
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
