image css 공통화 h2 > div 교체 background spinner 추가

--- a/client/src/assets/mixins.scss
+++ b/client/src/assets/mixins.scss
@@ -60,3 +60,14 @@
   font-weight: bold;
   color: #85b0e5;
 }
+
+@mixin background-spin-image {
+  & > img {
+    @include size(100px);
+    position: absolute;
+
+    &.spin {
+      animation: spin 4s linear infinite;
+    }
+  }
+}
