--- a/client/src/assets/mixins.scss
+++ b/client/src/assets/mixins.scss
@@ -30,6 +30,13 @@
   z-index: 100;
 }
 
+@mixin current-container-body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-end;
+}
+
 @mixin current-container-body-title {
   height: 60px;
   display: flex;
